--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
   "contributes": {
     "commands": [
       {
-        "command": "monaco-webview-extension.helloWorld",
-        "title": "Hello World"
+        "command": "monaco-webview-extension.openEditor",
+        "title": "Open Editor"
       }
     ]
   },
@@ -28,7 +28,8 @@
     "watch-tests": "tsc -p . -w --outDir out",
     "pretest": "yarn run compile-tests && yarn run compile && yarn run lint",
     "lint": "eslint src",
-    "test": "vscode-test"
+    "test": "vscode-test",
+    "build": "tsc -p ./"
   },
   "devDependencies": {
     "@types/vscode": "^1.102.0",
